--- a/majalah.html
+++ b/majalah.html
@@ -30,7 +30,7 @@
         .nav-link {
             padding: 8px 16px;
             border-radius: 12px;
-            background: #38a169;
+            bacEkground: #38a169;
             color: white;
             font-weight: bold;
             transition: all 0.3s ease;
@@ -60,7 +60,7 @@
         </header>
 
         <nav class="mt-6 bg-white p-4 rounded-lg shadow-md flex justify-around fade-in">
-            <a href="E-library.html" class="nav-link">🏠 Laman Utama</a>
+            <a href="index.html" class="nav-link">🏠 Laman Utama</a>
             <a href="novel.html" class="nav-link">📖 Novel & Komik</a>
             <a href="buku_sekolah.html" class="nav-link">📚 Buku Sekolah</a>
             <a href="buku_kesihatan.html" class="nav-link">💪 Kesihatan</a>
