--- a/buku_teknologi.html
+++ b/buku_teknologi.html
@@ -61,7 +61,7 @@
         </header>
 
         <nav class="mt-6 bg-white p-4 rounded-lg shadow-md fade-in flex justify-around">
-            <a href="E-library.html" class="nav-link">🏠 Laman Utama</a>
+            <a href="index.html" class="nav-link">🏠 Laman Utama</a>
             <a href="majalah.html" class="nav-link">📰 Majalah</a>
             <a href="novel.html" class="nav-link">📚 Novel</a>
             <a href="buku_sekolah.html" class="nav-link">🏫 Buku Sekolah</a>
