--- a/buku_kesihatan.html
+++ b/buku_kesihatan.html
@@ -61,7 +61,7 @@
         </header>
 
         <nav class="mt-6 bg-white p-4 rounded-lg shadow-md flex justify-around fade-in">
-            <a href="E-library.html" class="nav-link">🏠 Laman Utama</a>
+            <a href="index.html" class="nav-link">🏠 Laman Utama</a>
             <a href="novel.html" class="nav-link">📖 Novel & Komik</a>
             <a href="buku_sekolah.html" class="nav-link">📚 Buku Sekolah</a>
             <a href="buku_kesihatan.html" class="nav-link">💪 Kesihatan</a>
